--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "dependencies": {
     "@testing-library/react": "^16.3.0",
+    "firebase": "^11.6.0",
+    "react-router-dom": "^7.5.0",
     "tailwind": "^4.0.0",
     "vitest": "^3.1.1"
   },
