--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "dependencies": {
     "@testing-library/react": "^16.3.0",
     "firebase": "^11.6.0",
+    "next": "^15.3.0",
     "react-router-dom": "^7.5.0",
+    "router": "^2.2.0",
     "tailwind": "^4.0.0",
     "vitest": "^3.1.1"
   },
