--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "@testing-library/react": "^16.3.0",
+    "axios": "^1.8.4",
     "firebase": "^11.6.0",
     "react-router-dom": "^7.5.0",
     "tailwind": "^4.0.0",
